# cpm-emulator

./: .gitignore  Makefile.am  README.md  configure.ac  generate-gitfiles.sh
rom/: Makefile.am  coldboot.asm  console.asm  disk.asm  memory.asm  rom.asm  spi.asm
src/: Makefile.am  bootstrap.c  bootstrap.h  disk.c  disk.h  fifo.c  fifo.h  machine.c  machine.h  main.c  ram.c  ram.h  rom.c  rom.h  spi.c  spi.h  uart.c  uart.h
